# ParSoDA-Py

./: .COMPSs  .gitignore  COMPSs_tmp  Dockerfile  README.md  apt_install  docker-entrypoint.sh  generate_dataset.sh  nohup.out  pycompss-install.sh  requirements-test.txt  requirements.txt  setup.cfg  setup.py  test_parsoda.py  test_parsoda_pycompss-docker.py  test_parsoda_pycompss.py  test_parsoda_pyspark.py
.github/workflows/: continuous-delivery.yml  continuous-integration.yml  create-prerelease.yml  create-release.yml  dev-image-push.yml  python-app.yml
config/: dev-resources.xml  project-128cores.xml  project-16cores.xml  project-1cores.xml  project-2cores.xml  project-32cores.xml  project-4cores.xml  project-64cores.xml  project-8cores.xml  resources.xml
config/docker/: project-128cores.xml  project-16cores.xml  project-1cores.xml  project-256cores.xml  project-2cores.xml  project-32cores.xml  project-4cores.xml  project-64cores.xml  project-8cores.xml  resources.xml
design/: app-schema.uxf  crawling.uxf  parsoda-driver.uxf  parsoda-framework.uxf  parsoda-stages-classes.uxf  parsoda.uxf
parsoda/: __init__.py
parsoda/apps/: emoji_polarization_spark.py  sentiment_analysis.py  trajectory_mining.py  (+3 more)
src/: emoji_polarization_pycompss.py  emoji_polarization_spark.py  trajectory_mining_pycompss.py  trajectory_mining_singlecore.py  trajectory_mining_spark.py
test/: distribute_dataset.py  performance.py  test_parsoda_pycompss-docker.py  test_parsoda_pycompss.py  test_parsoda_pycompss_dev.py  test_parsoda_pycompss_task.py  test_parsoda_pyspark.py
(+102 files in other folders)
