[metadata]
version = file: VERSION,
name = ParSoDA
author = Loris Belcastro, Salvatore Giampà, Fabrizio Marozzo, Domenico Talia, Paolo Trunfio
author_email = belcastro@dtoklab.com, giampa@dtoklab.com, marozzo@dtoklab.com, talia@dtoklab.com, trunfio@dtoklab.com
description = ParSoDA: a Parallel Social Data Analytics library
keywords =  social, data, analysis, scalability, parallel, big data, social media, social networks, distributed computing
            media, networks, distributed, computing, trajectory, mining, pattern, roi, region of interest, point of interest
url = https://github.com/eflows4hpc/parsoda-py
long_description = file: README.md
long_description_content_type=text/markdown,
license_files = LICENSE
license = GNU General Public License v3 (GPLv3)
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Distributed Computing

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.8.0
install_requires = file: requirements.txt

[options.packages.find]
exclude =
    test
    test.*